--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "dev": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
     "start": "npm run dev",
     "websocket": "node build/websocket_server.js",
-    "build": "node build/build.js"
+    "build": "node build/build.js",
+    "mongo-express": "cd node_modules/mongo-express/ && node app.js"
   },
   "dependencies": {
     "axios": "^0.18.0",
@@ -39,6 +40,7 @@
     "friendly-errors-webpack-plugin": "^1.6.1",
     "html-webpack-plugin": "^2.30.1",
     "lodash": "^4.17.10",
+    "mongo-express": "^0.49.0",
     "node-notifier": "^5.1.2",
     "optimize-css-assets-webpack-plugin": "^3.2.0",
     "ora": "^1.2.0",
