support mongodb and mongoose

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "axios": "^0.18.0",
     "echarts": "^4.1.0",
+    "mongoose": "^5.2.9",
     "socket.io": "^2.1.1",
     "v-charts": "^1.17.8",
     "vue": "^2.5.2",
